in_class_mpi/slurm-2446166.out
stack size              (kbytes, -s) unlimited
mat_mat_mult.c: In function ‘main’:
mat_mat_mult.c:43:2: error: ‘for’ loop initial declarations are only allowed in C99 mode
  for(int i = 0; i < N; i++)
  ^
mat_mat_mult.c:43:2: note: use option -std=c99 or -std=gnu99 to compile your code
mat_mat_mult.c:45:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for(int j = 0; j < N; j++)
   ^
mat_mat_mult.c:57:18: error: expected ‘;’ before ‘:’ token
  for(i = 0; i < N: i++)
                  ^
mat_mat_mult.c:58:7: error: ‘j’ undeclared (first use in this function)
   for(j = 0; j < N; j++)
       ^
mat_mat_mult.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
mat_mat_mult.c:61:4: error: expected ‘;’ before ‘for’
    for(k = 0; k < N; k++)
    ^
[proxy:0:0@kp332] HYDU_create_process (../../utils/launch/launch.c:811): execvp error on file ./mat_mat_mult (No such file or directory)
[mpiexec@kp332] HYDU_sock_write (../../utils/sock/sock.c:418): write error (Bad file descriptor)
[mpiexec@kp332] HYD_pmcd_pmiserv_send_signal (../../pm/pmiserv/pmiserv_cb.c:252): unable to write data to proxy
[proxy:0:1@kp333] HYDU_create_process (../../utils/launch/launch.c:811): execvp error on file ./mat_mat_mult (No such file or directory)
